style: :sparkles: add animations and fix overflow

--- a/src/Components/Project/index.scss
+++ b/src/Components/Project/index.scss
@@ -15,6 +15,7 @@
   width: 100%;
   align-items: center;
   gap: 2rem;
+  overflow: hidden;
 
   .project_card__image {
     height: 20rem;
